# rust_game

./: '  .gitignore  Cargo.toml  run  run-release  rustfmt.toml
data/objects/: blue_crystal.mtl  box.mtl  cube.mtl  dice.mtl  green_crystal.mtl  red_crystal.mtl  sample.mtl  sample_2.mtl  wb_oit_test.mtl
data/shaders/: fragment.glsl  solid_f.glsl  solid_v.glsl  transparent_f.glsl  transparent_v.glsl  vertex.glsl
src/: _main0.rs  atlas.rs  config.rs  ext.rs  gl_utils.rs  glmc.rs  loader.rs  logger.rs  main.rs  memcast.rs
src/ext/: gl.rs  slice.rs
src/gl_wrapper/: enums.rs  mod.rs
